clang/test/BSC/Negative/Ownership/Borrow/borrow_init/borrow_init.cbs
// RUN: %clang_cc1 -ast-dump -verify %s
struct R {
   int num;
   int * _Borrow p1;
   const int * _Borrow p2;
};
struct R_wrap {
   struct R r;
};

void test() {
  int a = 1;
  int b = 1;
  int * _Borrow b1;
  const int * _Borrow b2;
  int * _Borrow * b3;
  int * _Borrow b4 = &_Mut a; // legal
  const int * _Borrow b5 = &_Const b; // legal
  int _Borrow * b6 = &_Mut a; // expected-error {{_Borrow type requires a pointer or reference ('int' is invalid)}}
                            // expected-error@-1 {{incompatible _Borrow types, cannot cast 'int *_Borrow' to '_Borrow int *'}}
  struct R r;
  struct R *pr;
  struct R **ppr;
  struct R_wrap rw;
  struct R_wrap *prw;
  struct R r1 = { .num = 1 }; // legal
  struct R r2 = { 1, b1, b2 }; // legal
  struct R r3 = { .p1 = b1, .p2 = b2}; // legal
  struct R r4 = { 1, b1 }; // legal
}